<resources>
    <string name="app_name">Noughts And Crosses</string>
    <string name="single_player">Single Player</string>
    <string name="two_players">Two Players</string>
    <string name="mail_title"><![CDATA[Noughts & Crosses]]></string>
    <string name="name">Name</string>
    <string name="client">Client</string>
    <string name="server">Server</string>
    <string name="single_start">Single Start</string>
    <string name="network_pk">Network PK</string>
    <string name="help">Help</string>
    <string name="about_us">About Us</string>
    <string name="stop">Stop</string>
    <string name="score_history">Score History</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="invite">Invite</string>
    <string name="remember">Remember</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm">Confirm</string>
    <string name="password">Password</string>
</resources>
