<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.ojava.noughtsandcrosses.MainActivity">

    <EditText
        android:layout_width="230dip"
        android:layout_height="wrap_content"
        android:id="@+id/nameEditText"
        android:layout_alignTop="@+id/nameTextView"
        android:layout_toRightOf="@+id/nameTextView"
        android:inputType="" />

    <TextView
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/password"
        android:id="@+id/resultTextView"
        android:layout_below="@+id/nameTextView"
        android:layout_marginTop="35dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="230dip"
        android:layout_height="wrap_content"
        android:id="@+id/pwdEditText"
        android:layout_alignTop="@+id/resultTextView"
        android:layout_toRightOf="@id/resultTextView"
        android:inputType="" />

    <TextView
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/confirm"
        android:id="@+id/confirmPwdTextView"
        android:layout_below="@+id/resultTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp" />

    <EditText
        android:layout_width="230dip"
        android:layout_height="wrap_content"
        android:id="@+id/confirmPwdEditText"
        android:layout_alignTop="@+id/confirmPwdTextView"
        android:layout_toRightOf="@+id/confirmPwdTextView"
        android:layout_toEndOf="@+id/confirmPwdTextView"
        android:inputType="" />

    <TextView
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name"
        android:id="@+id/nameTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/confirmPwdEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/cancelBtn"
            android:onClick="onCancelBtnClicked"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_dark"
            android:layout_margin="3dip" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/registerBtn"
            android:onClick="onRegisterBtnClicked"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_dark"
            android:layout_margin="3dip" />
    </LinearLayout>

</RelativeLayout>
