<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.ojava.noughtsandcrosses.MainActivity">

    <TextView
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name"
        android:id="@+id/nameTextView"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/imageView14"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="230dip"
        android:layout_height="wrap_content"
        android:id="@+id/nameEditText"
        android:layout_alignTop="@+id/nameTextView"
        android:layout_toRightOf="@+id/nameTextView"
        android:layout_toEndOf="@+id/nameTextView" />

    <TextView
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Password"
        android:id="@+id/resultTextView"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/nameEditText"
        android:layout_toLeftOf="@+id/passwordEditText"
        android:layout_toStartOf="@+id/passwordEditText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/stopBtn"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/passwordEditText"
        android:layout_centerHorizontal="true"
        android:onClick="onLoginBtnClicked" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/replayBtn"
        android:layout_alignTop="@+id/stopBtn"
        android:layout_alignRight="@+id/passwordEditText"
        android:layout_alignEnd="@+id/passwordEditText"
        android:onClick="onRegisterBtnClicked" />

    <EditText
        android:layout_width="230dip"
        android:layout_height="wrap_content"
        android:id="@+id/passwordEditText"
        android:layout_alignTop="@+id/resultTextView"
        android:layout_alignLeft="@+id/nameEditText"
        android:layout_alignStart="@+id/nameEditText"
        android:password="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember"
        android:id="@+id/rememberCheckBox"
        android:checked="true"
        android:layout_alignBaseline="@+id/stopBtn"
        android:layout_alignBottom="@+id/stopBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView14"
        android:src="@mipmap/ic_launcher"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
