<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.ojava.noughtsandcrosses.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mail_title"
        android:id="@+id/resultTextView"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/imageView12"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView12"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resultTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/single_player"
            android:id="@+id/singlePlayerBtn"
            android:onClick="onSinglePlayerBtnClicked"
            android:background="@android:color/holo_orange_dark"
            android:layout_margin="3dip" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/two_players"
            android:id="@+id/twoPlayerBtn"
            android:onClick="onTwoPlayerBtnClicked"
            android:background="@android:color/holo_orange_dark"
            android:layout_margin="3dip" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Exit"
            android:id="@+id/exitBtn"
            android:onClick="onExitBtnClicked"
            android:background="@android:color/holo_orange_dark"
            android:layout_margin="3dip" />
    </LinearLayout>
</RelativeLayout>
